--- a/libs/movies/nest/tsconfig.lib.json
+++ b/libs/movies/nest/tsconfig.lib.json
@@ -11,6 +11,11 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*.ts"],
+  "include": [
+    "src/**/*.ts",
+    "../../prisma/prisma.module.ts",
+    "../../prisma/prisma.service.spec.ts",
+    "../../prisma/prisma.service.ts"
+  ],
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
