--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "plex-tinder",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "lint": "nx run-many --all --target=lint",
+    "prisma:migrate": "yarn prisma migrate dev && POSTGRES_URL=$POSTGRES_TEST_URL yarn prisma migrate dev",
+    "prisma:migrate:deploy": "yarn prisma migrate deploy && POSTGRES_URL=$POSTGRES_TEST_URL yarn prisma migrate deploy",
+    "prisma:generate": "yarn prisma generate",
+    "start": "nx serve api"
+  },
   "private": true,
   "dependencies": {
     "@nestjs/cli": "^10.3.0",
