--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,10 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "strictPropertyInitialization": false,
+    "strictNullChecks": true,
+    "outDir": "./dist",
+    "noImplicitAny": false,
+    "strict": true,
     "paths": {
       "@plex-tinder/auth/core": ["libs/auth/core/src/index.ts"],
       "@plex-tinder/auth/nest": ["libs/auth/nest/src/index.ts"],
@@ -22,6 +26,7 @@
       "@plex-tinder/movies/core": ["libs/movies/core/src/index.ts"],
       "@plex-tinder/shared/utils": ["libs/shared/utils/src/index.ts"],
       "@plex-tinder/tasks": ["libs/tasks/src/index.ts"],
+      "@plex-tinder/utils": ["libs/shared/utils/src/index.ts"],
       "tasks": ["libs/tasks/src/index.ts"]
     }
   },
