--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,10 @@
     {
       "files": ["*.ts", "*.tsx"],
       "extends": ["plugin:@nx/typescript"],
-      "rules": {}
+      "rules": {
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": ["error"]
+      }
     },
     {
       "files": ["*.js", "*.jsx"],
