--- a/libs/shared/prisma/tsconfig.lib.json
+++ b/libs/shared/prisma/tsconfig.lib.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "../dist/out-tsc",
+    "outDir": "../../../dist/out-tsc",
     "declaration": true,
     "types": ["node"],
     "target": "es2021",
@@ -11,11 +11,6 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": [
-    "src/**/*.ts",
-    "../../prisma/prisma.module.ts",
-    "../../shared/prisma/src/lib/prisma.service.spec.ts",
-    "../../shared/prisma/src/lib/prisma.service.ts"
-  ],
+  "include": ["src/**/*.ts"],
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
