api ok for get movie by id

--- a/libs/movies/nest/project.json
+++ b/libs/movies/nest/project.json
@@ -1,7 +1,7 @@
 {
   "name": "movies",
   "$schema": "../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "movies/src",
+  "sourceRoot": "libs/movies/nest/src",
   "projectType": "library",
   "targets": {
     "lint": {
@@ -11,7 +11,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "movies/jest.config.ts"
+        "jestConfig": "libs/movies/nest/jest.config.ts"
       }
     }
   },
