--- a/libs/movies/repos/postgres/project.json
+++ b/libs/movies/repos/postgres/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "prisma",
-  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/shared/prisma/src",
+  "name": "postgres",
+  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "libs/movies/repos/postgres/src",
   "projectType": "library",
   "targets": {
     "lint": {
@@ -11,7 +11,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/shared/prisma/jest.config.ts"
+        "jestConfig": "libs/movies/repos/postgres/jest.config.ts"
       }
     }
   },
