--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "private": true,
   "dependencies": {
+    "@faker-js/faker": "^8.4.0",
+    "@nestjs/cache-manager": "^2.2.0",
     "@nestjs/cli": "^10.3.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
@@ -18,12 +20,20 @@
     "@nestjs/schedule": "^4.0.0",
     "@nestjs/swagger": "^7.2.0",
     "@prisma/client": "5.9.1",
+    "@types/redis": "^4.0.11",
     "axios": "^1.0.0",
+    "cache-manager-redis-store": "^3.0.1",
+    "class-validator": "^0.14.1",
+    "json-logic-js": "^2.0.2",
+    "redis": "^4.6.12",
     "reflect-metadata": "^0.1.13",
+    "remove-accents": "^0.5.0",
     "rxjs": "^7.8.0",
     "swagger-ui-express": "^5.0.0",
     "swc-loader": "^0.2.4",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "winston": "^3.11.0",
+    "winston-transport": "^4.6.0"
   },
   "devDependencies": {
     "@nestjs/schematics": "^10.0.1",
