--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,10 +24,22 @@
       "@plex-tinder/auth/nest": ["libs/auth/nest/src/index.ts"],
       "@plex-tinder/movies": ["libs/movies/nest/src/index.ts"],
       "@plex-tinder/movies/core": ["libs/movies/core/src/index.ts"],
+      "@plex-tinder/shared/nest": ["libs/shared/nest/src/index.ts"],
       "@plex-tinder/shared/utils": ["libs/shared/utils/src/index.ts"],
       "@plex-tinder/tasks": ["libs/tasks/src/index.ts"],
       "@plex-tinder/utils": ["libs/shared/utils/src/index.ts"],
-      "@plex-tinder/shared/prisma": ["libs/shared/prisma/src/index.ts"]
+      "@plex-tinder/shared/clients/prisma": [
+        "libs/shared/clients/prisma/src/index.ts"
+      ],
+      "@plex-tinder/shared/clients/winston": [
+        "libs/shared/clients/winston/src/index.ts"
+      ],
+      "@plex-tinder/shared/clients/http": [
+        "libs/shared/clients/http/src/index.ts"
+      ],
+      "@plex-tinder/movies/repos/postgres": [
+        "libs/movies/repos/postgres/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
