--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.0.0",
     "cache-manager": "^5.4.0",
     "cache-manager-redis-store": "^3.0.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "json-logic-js": "^2.0.2",
     "redis": "^4.6.12",
