--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@prisma/client": "5.9.1",
     "@types/redis": "^4.0.11",
     "axios": "^1.0.0",
+    "better-auth": "^1.4.3",
     "cache-manager": "^5.4.0",
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
