Enhance PlexRepository with configurable client identifier
- Added PLEX_CLIENT_IDENTIFIER to .env for unique client identification.
- Updated PlexRepository constructor to accept client identifier as a parameter.
- Refactored instantiation of PlexRepository in various modules to utilize the new environment variable, ensuring flexibility across installations.

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL=postgres://plex-tinder:toto42sh@localhost/plex-tinder
+PLEX_CLIENT_IDENTIFIER=votre-uuid-unique-ici-12345
