--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nestjs/schedule": "^4.0.0",
     "@nestjs/swagger": "^7.2.0",
     "@prisma/client": "5.9.1",
+    "@nestjs/websockets": "^10.0.2",
     "@types/redis": "^4.0.11",
     "axios": "^1.0.0",
     "better-auth": "^1.4.3",
@@ -32,6 +33,7 @@
     "reflect-metadata": "^0.1.13",
     "remove-accents": "^0.5.0",
     "rxjs": "^7.8.0",
+    "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.0",
     "swc-loader": "^0.2.4",
     "tslib": "^2.3.0",
