--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,8 +24,8 @@
       "@plex-tinder/auth/nest": ["libs/auth/nest/src/index.ts"],
       "@plex-tinder/movies": ["libs/movies/nest/src/index.ts"],
       "@plex-tinder/movies/core": ["libs/movies/core/src/index.ts"],
-      "@plex-tinder/movies/repos/postgres": [
-        "libs/movies/repos/postgres/src/index.ts"
+      "@plex-tinder/movies/repos/prisma": [
+        "libs/movies/repos/prisma/src/index.ts"
       ],
       "@plex-tinder/shared/clients/http": [
         "libs/shared/clients/http/src/index.ts"
@@ -54,6 +54,12 @@
       ],
       "@plex-tinder/secret/repos/prisma": [
         "libs/secret/repos/prisma/src/index.ts"
+      ],
+      "@plex-tinder/session": ["libs/session/nest/src/index.ts"],
+      "@plex-tinder/session/core": ["libs/session/core/src/index.ts"],
+      "@plex-tinder/session/nest": ["libs/session/nest/src/index.ts"],
+      "@plex-tinder/session/repos/prisma": [
+        "libs/session/repos/prisma/src/index.ts"
       ]
     }
   },
