--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/platform-socket.io": "^11.1.9",
     "@nestjs/schedule": "^4.0.0",
     "@nestjs/swagger": "^7.2.0",
-    "@prisma/client": "5.9.1",
     "@nestjs/websockets": "^10.0.2",
+    "@prisma/client": "5.9.1",
     "@types/redis": "^4.0.11",
     "axios": "^1.0.0",
     "better-auth": "^1.4.3",
