Enhance project setup and Postman testing documentation
- Added new scripts to `package.json` for easier database management, including `prisma:studio` and `db:reset:soft`.
- Updated Postman collection to version 2, restructuring the authentication and session flow for improved clarity and usability.
- Expanded the testing guide in `TESTING_WITH_POSTMAN.md` to include detailed steps for configuring Plex and syncing movies, enhancing the onboarding experience for developers.
- Refactored the main application entry point to set a global prefix for API routes, improving route organization and maintainability.
- Introduced a new use case for configuring Plex, ensuring better integration with the media center functionalities.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "prisma:migrate": "yarn prisma migrate dev && POSTGRES_URL=$POSTGRES_TEST_URL yarn prisma migrate dev",
     "prisma:migrate:deploy": "yarn prisma migrate deploy && POSTGRES_URL=$POSTGRES_TEST_URL yarn prisma migrate deploy",
     "prisma:generate": "yarn prisma generate",
+    "prisma:studio": "yarn prisma studio",
+    "db:reset:soft": "yarn prisma migrate reset --skip-seed && yarn prisma migrate deploy",
     "start": "nx serve api"
   },
   "private": true,
